feat: incendio items in coveñas sre

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -4777,6 +4777,275 @@
                   </div>
                 </div>
               </div>
+
+              <div class="card-interactive-icons px-5 py-3 mt-3">
+                <h6
+                  class="card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
+                >
+                  Incendio
+                </h6>
+                <h5 style="font-size: 14px" class="text-gray-light-ocensa">
+                  Off Shore - Leyenda
+                </h5>
+
+                <div class="row mt-3">
+                  <div class="col-12">
+                    <div
+                      data-target="covenas-sre-13"
+                      style="gap: 16px"
+                      class="d-flex align-items-center card-interactive-icons__container"
+                    >
+                      <div
+                        class="card-interactive-icons___box-icon"
+                        style="--border-fill: #ff5512"
+                      >
+                        <svg
+                          data-name="Grupo 653"
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="25.977"
+                          height="28.248"
+                          viewBox="0 0 25.977 28.248"
+                        >
+                          <defs>
+                            <clipPath id="0yqs4t58ca">
+                              <path
+                                data-name="Rectángulo 169"
+                                style="fill: #9a9a9a"
+                                d="M0 0h25.977v28.248H0z"
+                              />
+                            </clipPath>
+                          </defs>
+                          <g
+                            data-name="Grupo 652"
+                            style="clip-path: url(#0yqs4t58ca)"
+                          >
+                            <path
+                              data-name="Trazado 869"
+                              d="M299.571 241.55h-6.142a1.591 1.591 0 0 1-1.589-1.589v-11.505a3.09 3.09 0 0 1 3.086-3.086h3.147a3.09 3.09 0 0 1 3.086 3.086v11.505a1.591 1.591 0 0 1-1.588 1.589m-4.645-15.094a2 2 0 0 0-2 2v11.505a.5.5 0 0 0 .5.5h6.142a.5.5 0 0 0 .5-.5v-11.505a2 2 0 0 0-2-2z"
+                              transform="translate(-281.931 -217.718)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 870"
+                              d="M369.638 130.8h-3.2a.543.543 0 0 1-.543-.543v-2.4a1.5 1.5 0 0 1 1.5-1.5h2.247a.543.543 0 0 1 .543.543v3.361a.543.543 0 0 1-.543.544zm-2.662-1.086h2.118v-2.275h-1.7a.415.415 0 0 0-.415.415z"
+                              transform="translate(-353.467 -122.06)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 871"
+                              d="M457.31 127.436h-3.837a.543.543 0 0 1 0-1.086h3.837a.543.543 0 0 1 0 1.086"
+                              transform="translate(-437.552 -122.06)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 872"
+                              d="M464.4 160.938a.541.541 0 0 1-.223-.048l-3.587-1.616a.543.543 0 0 1 .446-.991l3.589 1.616a.543.543 0 0 1-.223 1.039z"
+                              transform="translate(-444.647 -152.863)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 873"
+                              d="M145.81 163.721h-1.716a.543.543 0 0 1-.543-.543v-7.824a4.789 4.789 0 0 1 4.783-4.784h3.309a.543.543 0 0 1 .543.543v1.717a.543.543 0 0 1-.543.543h-3.31a1.983 1.983 0 0 0-1.98 1.98v7.824a.543.543 0 0 1-.543.543m-1.173-1.086h.63v-7.281a3.07 3.07 0 0 1 3.067-3.067h2.766v-.63h-2.766a3.7 3.7 0 0 0-3.7 3.7z"
+                              transform="translate(-138.676 -145.458)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 874"
+                              d="M118.352 509.064H116a1.06 1.06 0 0 1-1.06-1.064v-1.046A1.06 1.06 0 0 1 116 505.9h2.353a1.06 1.06 0 0 1 1.059 1.059V508a1.06 1.06 0 0 1-1.059 1.059m-2.325-1.086h2.3v-.991h-2.3z"
+                              transform="translate(-111.037 -488.723)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 875"
+                              d="M120.3 572.014h-2.548a.895.895 0 0 1-.883-1.048l.6-3.436a.543.543 0 0 1 .535-.45h2.043a.543.543 0 0 1 .535.45l.6 3.436a.894.894 0 0 1-.883 1.048zm-2.32-1.087h2.091l-.481-2.761h-1.128z"
+                              transform="translate(-112.891 -547.826)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 876"
+                              d="M23.729 28.248H1.766A1.766 1.766 0 0 1 0 26.483V1.766A1.766 1.766 0 0 1 1.766 0h21.963a1.766 1.766 0 0 1 1.766 1.766v11.226a.543.543 0 0 1-1.086 0V1.766a.679.679 0 0 0-.679-.679H1.766a.679.679 0 0 0-.679.679v24.717a.679.679 0 0 0 .679.679h21.963a.679.679 0 0 0 .679-.679V15.257a.543.543 0 0 1 1.086 0v11.226a1.766 1.766 0 0 1-1.766 1.766"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 877"
+                              d="M83.383 87.9H65.766A1.766 1.766 0 0 1 64 86.137V65.766A1.766 1.766 0 0 1 65.766 64h17.617a1.766 1.766 0 0 1 1.766 1.766v9.053a.543.543 0 0 1-1.086 0v-9.053a.679.679 0 0 0-.679-.679H65.766a.679.679 0 0 0-.679.679v20.371a.679.679 0 0 0 .679.679h17.617a.679.679 0 0 0 .679-.679v-9.053a.543.543 0 1 1 1.086 0v9.053a1.766 1.766 0 0 1-1.765 1.763"
+                              transform="translate(-61.827 -61.827)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 878"
+                              d="M642.763 358.005a2.113 2.113 0 1 1 2.112-2.113 2.113 2.113 0 0 1-2.112 2.113m0-3.139a1.026 1.026 0 1 0 1.026 1.026 1.026 1.026 0 0 0-1.026-1.026z"
+                              transform="translate(-618.898 -341.768)"
+                              style="fill: #9a9a9a"
+                            />
+                          </g>
+                        </svg>
+                      </div>
+                      <div class="card-interactive-icons___box-description">
+                        <p>
+                          Gabinete <br />
+                          Contraincendio
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <h5 style="font-size: 14px" class="text-gray-light-ocensa mt-4">
+                  Off Shore - Hidrante
+                </h5>
+                <div class="row mt-3">
+                  <div class="col-12 col-lg-6">
+                    <div
+                      data-target="covenas-sre-14"
+                      style="gap: 16px"
+                      class="d-flex align-items-center card-interactive-icons__container"
+                    >
+                      <div
+                        class="card-interactive-icons___box-icon"
+                        style="--border-fill: #ff0000"
+                      >
+                        <svg
+                          data-name="Grupo 655"
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="28"
+                          height="22.5"
+                          viewBox="0 0 28 22.5"
+                        >
+                          <defs>
+                            <clipPath id="mxhzklgpna">
+                              <path
+                                data-name="Rectángulo 170"
+                                style="fill: #9a9a9a"
+                                d="M0 0h28v22.5H0z"
+                              />
+                            </clipPath>
+                          </defs>
+                          <g
+                            data-name="Grupo 654"
+                            style="clip-path: url(#mxhzklgpna)"
+                          >
+                            <path
+                              data-name="Trazado 879"
+                              d="M35.233 19.9a4.539 4.539 0 0 1-3.251-1.386 2.666 2.666 0 0 1-.712-2.348c.329-2.433 2.384-5.172 3.581-6.589a.515.515 0 0 1 .763 0c1.2 1.416 3.252 4.156 3.581 6.589a2.668 2.668 0 0 1-.711 2.348 4.539 4.539 0 0 1-3.251 1.386zm0-9.214c-1.133 1.404-2.708 3.659-2.971 5.614a1.665 1.665 0 0 0 .442 1.523 3.506 3.506 0 0 0 5.057 0A1.667 1.667 0 0 0 38.2 16.3c-.258-1.955-1.832-4.211-2.967-5.619z"
+                              transform="translate(-21.233 -6.395)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 880"
+                              d="M36.27 29.674a.5.5 0 0 1-.339-.132 1.875 1.875 0 0 1-.592-1.084 1.907 1.907 0 0 1 .585-1.624.5.5 0 1 1 .692.721.919.919 0 0 0-.29.75.888.888 0 0 0 .282.5.5.5 0 0 1-.339.869z"
+                              transform="translate(-24.021 -18.152)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 881"
+                              d="M27.5 16.5H.5A.5.5 0 0 1 0 16V.5A.5.5 0 0 1 .5 0h27a.5.5 0 0 1 .5.5V16a.5.5 0 0 1-.5.5zM1 15.5h26V1H1z"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 882"
+                              d="M40.437 53.939h-4a.5.5 0 0 1-.5-.5v-4.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4.5a.5.5 0 0 1-.5.5zm-3.5-1h3v-3.5h-3z"
+                              transform="translate(-24.437 -32.939)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 883"
+                              d="M38.187 65h-8a.5.5 0 0 1-.5-.5V63a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v1.5a.5.5 0 0 1-.5.5zm-7.5-1h7v-.5h-7z"
+                              transform="translate(-20.187 -42.5)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 884"
+                              d="M29.187 18.189h-24a.5.5 0 0 1-.5-.5v-12.5a.5.5 0 0 1 .5-.5h24a.5.5 0 0 1 .5.5v12.5a.5.5 0 0 1-.5.5zm-23.5-1h23v-11.5h-23z"
+                              transform="translate(-3.187 -3.189)"
+                              style="fill: #9a9a9a"
+                            />
+                          </g>
+                        </svg>
+                      </div>
+                      <div class="card-interactive-icons___box-description">
+                        <p>
+                          Hidrante Monitor <br />
+                          de Agua / Simple <br />
+                          de Agua
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-12 col-lg-6">
+                    <div
+                      data-target="covenas-sre-15"
+                      style="gap: 16px"
+                      class="d-flex align-items-center card-interactive-icons__container"
+                    >
+                      <div
+                        class="card-interactive-icons___box-icon"
+                        style="--border-fill: #27ff00"
+                      >
+                        <svg
+                          data-name="Grupo 663"
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="26.633"
+                          height="21.401"
+                          viewBox="0 0 26.633 21.401"
+                        >
+                          <defs>
+                            <clipPath id="70d5v066ca">
+                              <path
+                                data-name="Rectángulo 171"
+                                style="fill: #9a9a9a"
+                                d="M0 0h26.633v21.401H0z"
+                              />
+                            </clipPath>
+                          </defs>
+                          <g
+                            data-name="Grupo 662"
+                            style="clip-path: url(#70d5v066ca)"
+                          >
+                            <path
+                              data-name="Trazado 885"
+                              d="M26.157 15.694H.475A.475.475 0 0 1 0 15.219V.475A.475.475 0 0 1 .475 0h25.682a.475.475 0 0 1 .475.475v14.744a.475.475 0 0 1-.475.476zM.951 14.743h24.73V.951H.951z"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 886"
+                              d="M40.218 53.67h-3.8a.475.475 0 0 1-.475-.476v-4.28a.475.475 0 0 1 .475-.475h3.8a.475.475 0 0 1 .476.475v4.28a.475.475 0 0 1-.476.476zm-3.329-.951h2.854V49.39h-2.854z"
+                              transform="translate(-24.999 -33.695)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 887"
+                              d="M37.772 64.878h-7.609a.476.476 0 0 1-.476-.476v-1.426a.476.476 0 0 1 .476-.476h7.609a.475.475 0 0 1 .476.476V64.4a.475.475 0 0 1-.476.476zm-7.134-.951H37.3v-.475h-6.662z"
+                              transform="translate(-20.651 -43.477)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 888"
+                              d="M27.991 17.53H5.163a.476.476 0 0 1-.476-.476V5.164a.476.476 0 0 1 .476-.475h22.828a.475.475 0 0 1 .476.475v11.89a.475.475 0 0 1-.476.476zm-22.353-.952h21.877V5.64H5.638z"
+                              transform="translate(-3.26 -3.262)"
+                              style="fill: #9a9a9a"
+                            />
+                            <path
+                              data-name="Trazado 889"
+                              d="M34.55 19.962a1.237 1.237 0 0 0-.346-.476 1.225 1.225 0 0 0-.79-.288 1.258 1.258 0 0 0-.192.014 1.2 1.2 0 0 0-.186.045.218.218 0 0 1-.262-.112 1.24 1.24 0 0 0-.455-.508 1.222 1.222 0 0 0-.651-.186 1.2 1.2 0 0 0-.628.172.218.218 0 0 1-.285-.055 1.632 1.632 0 0 0-1.693-.5h-.009a1.619 1.619 0 0 0-.41.189.219.219 0 0 1-.3-.063 2.433 2.433 0 0 0-.852-.717 2.425 2.425 0 0 0-2.433.149 2.433 2.433 0 0 0-.894 1.091.218.218 0 0 1-.247.13q-.088-.018-.173-.028a1.663 1.663 0 0 0-.175-.009 1.623 1.623 0 0 0-1.555 1.154H34.55zm-1.113-8.2a.218.218 0 1 1-.387.2 1.153 1.153 0 0 0-.165-.247l-.009-.011a.533.533 0 0 0-.152-.118.218.218 0 1 1 .193-.39.972.972 0 0 1 .28.215l.012.012a1.626 1.626 0 0 1 .228.335zm-2.079.147a1.369 1.369 0 1 1 .4.967 1.362 1.362 0 0 1-.4-.967m.709-.659a.934.934 0 1 0 .659-.272.928.928 0 0 0-.659.272m.289 4.157a.218.218 0 0 1-.4.172 1.416 1.416 0 0 0-.18-.315l-.009-.012a.667.667 0 0 0-.182-.164.217.217 0 0 1 .22-.375 1.107 1.107 0 0 1 .3.271l.011.012a1.875 1.875 0 0 1 .236.411zm-2.513.239a1.578 1.578 0 0 1 .463-1.118l.013-.012a1.58 1.58 0 0 1 2.224.011 1.58 1.58 0 0 1 0 2.235 1.581 1.581 0 0 1-2.7-1.118zm.772-.81a.939.939 0 1 0 .01-.012l-.01.011zm-1.354-3.2a.218.218 0 0 1-.4.167 2.3 2.3 0 0 0-.3-.534 1.039 1.039 0 0 0-.325-.286.218.218 0 1 1 .2-.385 1.454 1.454 0 0 1 .464.4 2.78 2.78 0 0 1 .357.636zm-3.825.347a2.357 2.357 0 1 1 .691 1.666 2.348 2.348 0 0 1-.691-1.666m1-1.358a1.921 1.921 0 1 0 1.358-.562 1.916 1.916 0 0 0-1.358.562m-2.216 3.827a.218.218 0 1 1-.051.433 1.472 1.472 0 0 0-.363 0 .689.689 0 0 0-.247.078.218.218 0 0 1-.215-.379 1.11 1.11 0 0 1 .4-.131 1.861 1.861 0 0 1 .473 0zm-1.05 2.3a1.582 1.582 0 1 1 1.2.158 1.575 1.575 0 0 1-1.2-.158zm-.316-1.073a1.144 1.144 0 1 0 .114-.869 1.141 1.141 0 0 0-.114.869m4.962 2.911a.217.217 0 0 1-.355.25 1.2 1.2 0 0 0-.354-.328 1.789 1.789 0 0 0-.531-.21.218.218 0 0 1 .1-.425 2.235 2.235 0 0 1 .661.264 1.629 1.629 0 0 1 .48.448zm6.667.569a1.662 1.662 0 0 1 .566.976.213.213 0 0 1 .005.051.218.218 0 0 1-.218.218H21.715a.217.217 0 0 1-.187-.245 2.061 2.061 0 0 1 2.041-1.78 2.123 2.123 0 0 1 .221.012l.043.005a2.854 2.854 0 0 1 4.746-.6 2.053 2.053 0 0 1 .351-.141h.01a2.052 2.052 0 0 1 2.036.52 1.661 1.661 0 0 1 2.1.63l.077-.014a1.675 1.675 0 0 1 .258-.021 1.653 1.653 0 0 1 1.07.391z"
+                              transform="translate(-14.974 -6.693)"
+                              style="fill: #9a9a9a"
+                            />
+                          </g>
+                        </svg>
+                      </div>
+                      <div class="card-interactive-icons___box-description">
+                        <p>
+                          Hidrante Monitor <br />
+                          de Espuma/ Simple <br />
+                          de Agua
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div id="col-map" class="col">
