feat: complete points of equipos operaciones

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -3074,40 +3074,30 @@
                         style="--border-fill: #27ff00"
                       >
                         <svg
-                          data-name="Vector Smart Object"
                           xmlns="http://www.w3.org/2000/svg"
-                          width="88.103"
-                          height="88.103"
-                          viewBox="0 0 88.103 88.103"
+                          width="23"
+                          height="23"
+                          viewBox="0 0 23 23"
                         >
                           <defs>
-                            <clipPath id="0iy8iub1ea">
+                            <clipPath id="ogon06w4ua">
                               <path
                                 data-name="Rectángulo 199"
+                                transform="translate(.333 .333)"
                                 style="fill: #707070"
-                                d="M0 0h54.782v54.782H0z"
+                                d="M0 0h23v23H0z"
                               />
                             </clipPath>
                           </defs>
-                          <g data-name="Vector Smart Object">
-                            <circle
-                              data-name="Elipse 13"
-                              cx="44.051"
-                              cy="44.051"
-                              style="fill: #fff"
-                              r="44.051"
-                            />
-                          </g>
                           <g data-name="Grupo 706">
                             <g
                               data-name="Grupo 705"
-                              transform="translate(15.481 16.673)"
-                              style="clip-path: url(#0iy8iub1ea)"
+                              style="clip-path: url(#ogon06w4ua)"
+                              transform="translate(-.333 -.333)"
                             >
                               <path
                                 data-name="Trazado 1299"
-                                d="M45.405 18.969V.7a.7.7 0 0 0-.7-.7H39.6a.7.7 0 0 0-.7.7v16.87a16.313 16.313 0 0 0-9.966-6.894V.7a.7.7 0 0 0-.7-.7h-5.977a.7.7 0 0 0-.7.7v9.973a16.223 16.223 0 0 0-2.9.97V5.424A5.43 5.43 0 0 0 13.227 0h-7.8A5.43 5.43 0 0 0 0 5.424v50.135a.7.7 0 0 0 .7.7h4.7a.7.7 0 0 0 .7-.7V6.742a.874.874 0 0 1 .873-.873h4.685a.874.874 0 0 1 .873.873v9.553a16.377 16.377 0 0 0-3.696 10.371v26.783a.7.7 0 0 0 .7.7h18.508v1.407a.7.7 0 0 0 .7.7h26.816a.7.7 0 0 0 .7-.7V32.7a14.122 14.122 0 0 0-10.854-13.731M11.668 4.463H6.983A2.283 2.283 0 0 0 4.7 6.742v48.114H1.4V5.424a4.021 4.021 0 0 1 4.024-4.017h7.8a4.022 4.022 0 0 1 4.017 4.017v6.927a16.385 16.385 0 0 0-3.3 2.433V6.742a2.282 2.282 0 0 0-2.279-2.279m-1.421 48.283v-26.08A15.013 15.013 0 0 1 22.39 11.937a.7.7 0 0 0 .57-.691V1.407h4.568v9.84a.7.7 0 0 0 .57.691 14.928 14.928 0 0 1 10.131 7.221A14.116 14.116 0 0 0 28.043 32.7v20.046zm44.615 2.11H29.45V32.7a12.712 12.712 0 0 1 10.287-12.472.7.7 0 0 0 .57-.691V1.407H44v18.13a.7.7 0 0 0 .57.691A12.712 12.712 0 0 1 54.856 32.7z"
-                                transform="translate(-.794 -.794)"
+                                d="M19.063 7.964V.3a.3.3 0 0 0-.3-.3h-2.14a.3.3 0 0 0-.3.3v7.077a6.849 6.849 0 0 0-4.184-2.894V.3a.3.3 0 0 0-.3-.3H9.344a.3.3 0 0 0-.3.3v4.182a6.811 6.811 0 0 0-1.214.408V2.277A2.28 2.28 0 0 0 5.553 0H2.277A2.28 2.28 0 0 0 0 2.277v21.049a.3.3 0 0 0 .3.3h1.97a.3.3 0 0 0 .3-.3V2.831a.367.367 0 0 1 .367-.366H4.9a.367.367 0 0 1 .366.366v4.01A6.876 6.876 0 0 0 3.709 11.2v11.24a.3.3 0 0 0 .3.3h7.769v.591a.3.3 0 0 0 .3.3h11.248a.3.3 0 0 0 .3-.3v-9.6a5.929 5.929 0 0 0-4.558-5.764M4.9 1.874H2.932a.958.958 0 0 0-.957.957v20.2H.591V2.277A1.688 1.688 0 0 1 2.277.591h3.276A1.689 1.689 0 0 1 7.24 2.277v2.908a6.879 6.879 0 0 0-1.384 1.022V2.831a.958.958 0 0 0-.956-.957m-.6 20.271V11.2a6.3 6.3 0 0 1 5.1-6.188.3.3 0 0 0 .239-.29V.591h1.918v4.131a.3.3 0 0 0 .239.29 6.268 6.268 0 0 1 4.254 3.031 5.927 5.927 0 0 0-4.276 5.685v8.417zm18.731.886H12.364v-9.3a5.337 5.337 0 0 1 4.319-5.236.3.3 0 0 0 .239-.29V.591h1.55V8.2a.3.3 0 0 0 .239.29 5.337 5.337 0 0 1 4.319 5.236z"
                                 style="fill: #707070"
                               />
                             </g>
@@ -4146,7 +4136,7 @@
                     </div>
                   </div>
 
-                  <div style="margin-top: -43px;" class="col-12 col-lg-4">
+                  <div style="margin-top: -43px" class="col-12 col-lg-4">
                     <div
                       data-target="covenas-operaciones-33"
                       style="gap: 16px"
@@ -5819,6 +5809,291 @@
                   >
                     <span
                       style="--outline-color: #ffa921; left: 442px; top: 402px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <!-- Dots operaciones -->
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-1"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 462px; top: 336px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-2"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 486px; top: 346px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-3"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 517px; top: 351px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-4"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 486px; top: 346px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-5"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 513px; top: 349px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-6"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 406px; top: 320px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-7"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 408px; top: 300px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-8"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 506px; top: 325px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-9"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 802px; top: 364px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-10"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 513px; top: 338px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-11"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 510px; top: 354px"
+                      class="location-map-dot"
+                    ></span>
+
+                    <span
+                      style="--outline-color: #27ff00; left: 493px; top: 370px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-12"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 467px; top: 323px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-13"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 440px; top: 354px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-14"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 490px; top: 343px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-15"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 419px; top: 349px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-16"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 420px; top: 308px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-17"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 436px; top: 349px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-18"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 510px; top: 354px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-19"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 451px; top: 343px"
+                      class="location-map-dot"
+                    ></span>
+
+                    <span
+                      style="--outline-color: #27ff00; left: 495px; top: 350px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-20"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 542px; top: 337px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-21"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 365px; top: 331px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-22"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 595px; top: 412px"
+                      class="location-map-dot"
+                    ></span>
+
+                    <span
+                      style="--outline-color: #27ff00; left: 680px; top: 447px"
+                      class="location-map-dot"
+                    ></span>
+
+                    <span
+                      style="--outline-color: #27ff00; left: 736px; top: 389px"
+                      class="location-map-dot"
+                    ></span>
+
+                    <span
+                      style="--outline-color: #27ff00; left: 782px; top: 342px"
+                      class="location-map-dot"
+                    ></span>
+
+                    <span
+                      style="--outline-color: #27ff00; left: 756px; top: 318px"
+                      class="location-map-dot"
+                    ></span>
+
+                    <span
+                      style="--outline-color: #27ff00; left: 809px; top: 319px"
+                      class="location-map-dot"
+                    ></span>
+
+                    <span
+                      style="--outline-color: #27ff00; left: 789px; top: 296px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-23"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 518px; top: 367px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-24"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 413px; top: 315px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #27ff00; left: 454px; top: 326px"
                       class="location-map-dot"
                     ></span>
                   </div>
