feat: finish points of coveñas operaciones

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6097,6 +6097,148 @@
                       class="location-map-dot"
                     ></span>
                   </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-25"
+                  >
+                    <span
+                      style="--outline-color: #21a605; left: 479px; top: 330px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-26"
+                  >
+                    <span
+                      style="--outline-color: #21a605; left: 399px; top: 437px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-27"
+                  >
+                    <span
+                      style="--outline-color: #21a605; left: 315px; top: 355px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #21a605; left: 290px; top: 365px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #21a605; left: 382px; top: 443px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-28"
+                  >
+                    <span
+                      style="--outline-color: #21a605; left: 260px; top: 362px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #21a605; left: 285px; top: 346px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-29"
+                  >
+                    <span
+                      style="--outline-color: #21a605; left: 302px; top: 393px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-30"
+                  >
+                    <span
+                      style="--outline-color: #21a605; left: 467px; top: 311px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-31"
+                  >
+                    <span
+                      style="--outline-color: #21a605; left: 491px; top: 324px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-32"
+                  >
+                    <span
+                      style="--outline-color: #21a605; left: 312px; top: 378px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-33"
+                  >
+                    <span
+                      style="--outline-color: #21a605; left: 280px; top: 394px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-34"
+                  >
+                    <span
+                      style="--outline-color: #21a605; left: 360px; top: 384px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-35"
+                  >
+                    <span
+                      style="--outline-color: #21a605; left: 355px; top: 384px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-36"
+                  >
+                    <span
+                      style="--outline-color: #21a605; left: 368px; top: 456px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-37"
+                  >
+                    <span
+                      style="--outline-color: #21a605; left: 349px; top: 477px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
                 </div>
                 <img
                   class="img-fluid map-terminal-2024"
